--- a/problema-lineal.ipynb
+++ b/problema-lineal.ipynb
@@ -1150,11 +1150,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problema de Programación Entera.\n",
+    "### Problema de Programación Entera: Decisión de Inversión.\n",
+    "Un banco dispone de un presupuesto total de **2.000.000 €** para invertir en diferentes opciones financieras durante un año. El objetivo es decidir **en qué opciones invertir**, maximizando el retorno total anual, considerando las restricciones regulatorias y las políticas internas de gestión del riesgo.\n",
     "\n",
+    "Las opciones de inversión disponibles son:\n",
     "\n",
-    "problema binario, de resolver, si invertir o no"
+    "1. **Préstamos a corto plazo**, con un retorno anual del **8 %**, y una inversión de **800.000 €** si es seleccionada.\n",
+    "2. **Préstamos a mediano plazo**, con un retorno anual del **10 %**, y una inversión de **1.000.000 €** si es seleccionada.\n",
+    "3. **Bonos a 6 meses**, con un retorno anual del **6 %**, y una inversión de **600.000 €** si es seleccionada.\n",
+    "4. **Reservas en efectivo**, con un retorno anual del **1 %**, y una inversión de **400.000 €** si es seleccionada.\n",
+    "\n",
+    "El banco debe tomar decisiones binarias sobre si invertir o no en cada opción, respetando las siguientes restricciones:\n",
+    "\n",
+    "1. La inversión total no debe superar el presupuesto de **2.000.000 €**.\n",
+    "2. Al menos el **20 %** del presupuesto debe mantenerse en reservas líquidas.\n",
+    "3. No se puede invertir simultáneamente en ambas opciones de préstamos.\n",
+    "4. Al menos una inversión debe realizarse en bonos o reservas líquidas para garantizar liquidez."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Planteamiento: Problema Primal.\n",
+    "\n",
+    "**Variables de decisión.** Sea:\n",
+    "$$\n",
+    "x_1 \\equiv \\text{Inversión en préstamos a corto plazo (0 o 1).} \\\\\n",
+    "x_2 \\equiv \\text{Inversión en préstamos a mediano plazo (0 o 1).} \\\\\n",
+    "x_3 \\equiv \\text{Inversión en bonos a 6 meses (0 o 1).} \\\\\n",
+    "x_4 \\equiv \\text{Inversión en reservas en efectivo (0 o 1).}\n",
+    "$$\n",
+    "\n",
+    "**Función objetivo.** El objetivo del banco es maximizar el rendimiento total de las inversiones, considerando las tasas de retorno y los montos asociados a cada opción:\n",
+    "\n",
+    "$$\n",
+    "\\text{maximizar} \\quad 0.08 \\cdot 800000 \\cdot x_1 + 0.10 \\cdot 1000000 \\cdot x_2 + 0.06 \\cdot 600000 \\cdot x_3 + 0.01 \\cdot 400000 \\cdot x_4\n",
+    "$$\n",
+    "\n",
+    "**Restricciones.** El problema de programación entera está sujeto a un conjunto de cuatro restricciones que aseguran el cumplimiento de los límites establecidos:\n",
+    "\n",
+    "1. **Presupuesto total.** La suma de las inversiones no debe superar el presupuesto disponible de **2.000.000 €**.\n",
+    "2. **Reservas líquidas.** Al menos el **20 %** del presupuesto debe mantenerse en reservas líquidas.\n",
+    "3. **Exclusividad de préstamos.** No se puede invertir simultáneamente en ambas opciones de préstamos.\n",
+    "4. **Garantía de liquidez.** Al menos una inversión debe realizarse en bonos o reservas líquidas para garantizar liquidez.\n",
+    "\n",
+    "Expresado matemáticamente, este conjunto de restricciones se define de la siguiente manera:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\text{Presupuesto total:} & \\quad 800000 \\cdot x_1 + 1000000 \\cdot x_2 + 600000 \\cdot x_3 + 400000 \\cdot x_4 \\leqslant 2000000 \\\\\n",
+    "\\text{Reservas líquidas:} & \\quad 400000 \\cdot x_4 \\geqslant 0.20 \\cdot 2000000 \\\\\n",
+    "\\text{Exclusividad de préstamos:} & \\quad x_1 + x_2 \\leqslant 1 \\\\\n",
+    "\\text{Garantía de liquidez:} & \\quad x_3 + x_4 \\geqslant 1 \\\\\n",
+    "\\text{Naturaleza binaria:} & \\quad x_1, x_2, x_3, x_4 \\in \\{0,1\\}\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tras haber definido las variables de decisión, la función objetivo y las restricciones, el problema puede ser formulado de la siguiente forma:\n",
+    "\n",
+    "$$\n",
+    "\\text{maximizar} \\quad 64000x_1 + 100000x_2 + 36000x_3 + 4000x_4 \\\\\n",
+    "\\text{sujeto a.} \\quad 800000x_1 + 1000000x_2 + 600000x_3 + 400000x_4 \\leqslant 2000000 \\\\\n",
+    "\\phantom{\\text{sujeto a.}} \\quad 400000x_4 \\geqslant 0.20 \\cdot 2000000 \\\\\n",
+    "\\phantom{\\text{sujeto a.}} \\quad x_1 + x_2 \\leqslant 1 \\\\\n",
+    "\\phantom{\\text{sujeto a.}} \\quad x_3 + x_4 \\geqslant 1 \\\\\n",
+    "\\phantom{\\text{sujeto a.}} \\quad x_1, x_2, x_3, x_4 \\in \\{0,1\\}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
