--- a/problema-lineal.ipynb
+++ b/problema-lineal.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -740,13 +740,7 @@
      "text": [
       "Análisis de sensibilidad:\n",
       "\n",
-      "Evaluando cambios en el presupuesto...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Evaluando cambios en el presupuesto...\n",
       "Presupuesto = 1950000: Nuevo valor de la función objetivo = 147500.0000\n",
       "Presupuesto = 2050000: Nuevo valor de la función objetivo = 156000.0000\n",
       "Presupuesto = 2100000: Nuevo valor de la función objetivo = 160000.0000\n",
@@ -830,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1074,7 @@
        "11       0.0  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,21 +1145,22 @@
    "metadata": {},
    "source": [
     "### Problema de Programación Entera: Decisión de Inversión.\n",
+    "\n",
     "Un banco dispone de un presupuesto total de **2.000.000 €** para invertir en diferentes opciones financieras durante un año. El objetivo es decidir **en qué opciones invertir**, maximizando el retorno total anual, considerando las restricciones regulatorias y las políticas internas de gestión del riesgo.\n",
     "\n",
-    "Las opciones de inversión disponibles son:\n",
-    "\n",
-    "1. **Préstamos a corto plazo**, con un retorno anual del **8 %**, y una inversión de **800.000 €** si es seleccionada.\n",
-    "2. **Préstamos a mediano plazo**, con un retorno anual del **10 %**, y una inversión de **1.000.000 €** si es seleccionada.\n",
-    "3. **Bonos a 6 meses**, con un retorno anual del **6 %**, y una inversión de **600.000 €** si es seleccionada.\n",
-    "4. **Reservas en efectivo**, con un retorno anual del **1 %**, y una inversión de **400.000 €** si es seleccionada.\n",
+    "| **Opción de Inversión**      | **Retorno Anual (%)** | **Inversión Requerida (€)** |\n",
+    "|-----------------------------|----------------------|----------------------------|\n",
+    "| Préstamos a corto plazo      | 8 %                  | 800.000                     |\n",
+    "| Préstamos a mediano plazo    | 10 %                 | 1.000.000                   |\n",
+    "| Bonos a 6 meses              | 6 %                  | 600.000                     |\n",
+    "| Reservas en efectivo         | 1 %                  | 400.000                     |\n",
     "\n",
     "El banco debe tomar decisiones binarias sobre si invertir o no en cada opción, respetando las siguientes restricciones:\n",
     "\n",
     "1. La inversión total no debe superar el presupuesto de **2.000.000 €**.\n",
     "2. Al menos el **20 %** del presupuesto debe mantenerse en reservas líquidas.\n",
     "3. No se puede invertir simultáneamente en ambas opciones de préstamos.\n",
-    "4. Al menos una inversión debe realizarse en bonos o reservas líquidas para garantizar liquidez."
+    "4. Al menos una inversión debe realizarse en bonos o reservas líquidas para garantizar liquidez.\n"
    ]
   },
   {
@@ -1217,7 +1212,7 @@
     "$$\n",
     "\\text{maximizar} \\quad 64000x_1 + 100000x_2 + 36000x_3 + 4000x_4 \\\\\n",
     "\\text{sujeto a.} \\quad 800000x_1 + 1000000x_2 + 600000x_3 + 400000x_4 \\leqslant 2000000 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad 400000x_4 \\geqslant 0.20 \\cdot 2000000 \\\\\n",
+    "\\phantom{\\text{sujeto a.}} \\quad x_4 \\geqslant 1 \\\\\n",
     "\\phantom{\\text{sujeto a.}} \\quad x_1 + x_2 \\leqslant 1 \\\\\n",
     "\\phantom{\\text{sujeto a.}} \\quad x_3 + x_4 \\geqslant 1 \\\\\n",
     "\\phantom{\\text{sujeto a.}} \\quad x_1, x_2, x_3, x_4 \\in \\{0,1\\}\n",
@@ -1225,11 +1220,131 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### **Análisis del Árbol de Enumeración.**\n",
+    "El árbol de enumeración para este problema de inversión se construye considerando las 4 opciones de inversión, cada una con una decisión binaria (invertir o no invertir). Dado que cada opción tiene dos posibles estados (0 o 1), el número total de combinaciones posibles es $2^4 = 16$, lo que significa que el **número total de hojas** en el árbol de decisión es **16**, representando todas las combinaciones posibles de inversión.\n",
+    "\n",
+    "El **tamaño del árbol**, es decir, el número total de nodos, se puede calcular considerando que en un árbol binario completo con $n$ niveles (en este caso, 4 niveles) el número total de nodos se determina por la fórmula:\n",
+    "$$\n",
+    "\\text{Total de nodos} = 2^{n+1} - 1 = 2^{4+1} - 1 = 31\n",
+    "$$\n",
+    "Esto implica que el árbol contiene **31 nodos**, incluyendo tanto los nodos internos como las hojas.\n",
+    "\n",
+    "En la práctica, no todas las combinaciones de inversión son viables debido a las restricciones del problema, lo que reduce el tamaño del espacio de búsqueda. Para encontrar la solución óptima de manera eficiente, se utilizan técnicas como **Ramifica y Acota (Branch and Bound)**, que optimizan la exploración del árbol de decisión mediante la poda de soluciones. Este método realiza **poda por no factibilidad**, descartando ramas que violan restricciones; **poda por acotación**, eliminando opciones que no pueden mejorar la solución óptima encontrada hasta el momento; y **poda por sondeo**, utilizando aproximaciones para evaluar si una rama tiene potencial antes de explorarla completamente. Estas estrategias permiten acelerar la búsqueda, reduciendo significativamente el número de combinaciones a evaluar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Resolución programada a través de Pyomo.**\n",
+    "Se ha utilizado **Pyomo**, una librería de optimización para formular y resolver el problema de inversión de manera eficiente. Pyomo permite definir variables de decisión, restricciones y funciones objetivo de forma flexible, facilitando la implementación del modelo. El objetivo es **maximizar el retorno anual**, cumpliendo restricciones como el presupuesto disponible, la liquidez mínima y la exclusión de inversiones simultáneas.\n",
+    "\n",
+    "La resolución se lleva a cabo utilizando el **solver GLPK**, que aplica algoritmos de optimización como el **Ramifica y Acota (Branch and Bound)** para explorar el espacio de soluciones. A través de este, se pueden obtener decisiones óptimas que maximizan la rentabilidad de la inversión, cumpliendo con todas las restricciones impuestas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opciones seleccionadas para inversión:\n",
+      "- Préstamos a mediano plazo\n",
+      "- Bonos a 6 meses\n",
+      "- Reservas en efectivo\n",
+      "\n",
+      "Retorno total máximo esperado: 140000.00 €\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creación del modelo.\n",
+    "model = ConcreteModel()\n",
+    "\n",
+    "# Definición de los datos del problema.\n",
+    "opciones = [1, 2, 3, 4]\n",
+    "'''\n",
+    "Opciones de inversión:\n",
+    "    1 = Préstamos a corto plazo.\n",
+    "    2 = Préstamos a mediano plazo.\n",
+    "    3 = Bonos a 6 meses.\n",
+    "    4 = Reservas en efectivo.\n",
+    "'''\n",
+    "# Definición de los datos del problema.\n",
+    "retorno = {\n",
+    "    1: 0.08 * 800000,\n",
+    "    2: 0.10 * 1000000,\n",
+    "    3: 0.06 * 600000,\n",
+    "    4: 0.01 * 400000\n",
+    "}\n",
+    "inversion = {\n",
+    "    1: 800000,\n",
+    "    2: 1000000,\n",
+    "    3: 600000,\n",
+    "    4: 400000\n",
+    "}\n",
+    "presupuesto_total = 2000000\n",
+    "\n",
+    "# Definición de las variables binarias de decisión (1 = invertir, 0 = no invertir).\n",
+    "model.x = Var(opciones, within=Binary)\n",
+    "\n",
+    "# Definición de la función objetivo (maximizar el retorno total).\n",
+    "model.obj = Objective(expr=sum(retorno[i] * model.x[i] for i in opciones), sense=maximize)\n",
+    "\n",
+    "# Definición de las restricciones.\n",
+    "model.constraint1 = Constraint(expr=sum(inversion[i] * model.x[i] for i in opciones) <= presupuesto_total)\n",
+    "model.constraint2 = Constraint(expr=model.x[4] >= 1)\n",
+    "model.constraint3 = Constraint(expr=model.x[1] + model.x[2] <= 1)\n",
+    "model.constraint4 = Constraint(expr=model.x[3] + model.x[4] >= 1)\n",
+    "\n",
+    "# Resolver el modelo usando el solver GLPK\n",
+    "solver = SolverFactory('glpk')\n",
+    "resultado = solver.solve(model)\n",
+    "\n",
+    "# Mostrar los resultados\n",
+    "print(\"Opciones seleccionadas para inversión:\")\n",
+    "for i in opciones:\n",
+    "    if model.x[i]() == 1:\n",
+    "        if i == 1:\n",
+    "            print(\"- Préstamos a corto plazo\")\n",
+    "        elif i == 2:\n",
+    "            print(\"- Préstamos a mediano plazo\")\n",
+    "        elif i == 3:\n",
+    "            print(\"- Bonos a 6 meses\")\n",
+    "        elif i == 4:\n",
+    "            print(\"- Reservas en efectivo\")\n",
+    "\n",
+    "print(f\"\\nRetorno total máximo esperado: {model.obj():.2f} €\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La solución óptima indica que la mejor combinación de inversiones para **maximizar el retorno total anual** consiste en invertir en préstamos a mediano plazo, bonos a 6 meses y mantener reservas en efectivo. Esta selección ha sido realizada respetando todas las restricciones impuestas en el modelo.\n",
+    "\n",
+    "1. **Préstamos a mediano plazo**, asignando un monto de $1.000.000 \\text{€}$, lo que genera un rendimiento del 10%, equivalente a un retorno de $100.000 €$. La elección de esta opción implica que **no se ha seleccionado la inversión en préstamos a corto plazo**, cumpliendo con la restricción de exclusividad de préstamos establecida en el problema.\n",
+    "\n",
+    "2. **Bonos a 6 meses**, destinandose un total de $600.000 \\text{€}$, con un rendimiento del 6%, lo que representa un retorno adicional de $36.000 \\text{€}$. Esta inversión contribuye a la seguridad de liquidez del banco.\n",
+    "\n",
+    "3. **Reservas en efectivo**, con un monto de $400.000 \\text{€}$, que representa el 20% del presupuesto total, garantizando el cumplimiento de la restricción de liquidez mínima. Sin embargo, esta opción genera un rendimiento más bajo del 1%, resultando en un retorno de $4.000 \\text{€}$.\n",
+    "\n",
+    "El **retorno total máximo esperado** derivado de estas inversiones es de **140.000 €**, calculado como la suma de los rendimientos obtenidos de cada opción seleccionada:\n",
+    "\n",
+    "$$\n",
+    "100.000 + 36.000 + 4.000 = 140.000 \\text{€}\n",
+    "$$\n",
+    "\n",
+    "Desde el punto de vista de las restricciones, la solución garantiza que la **inversión total no excede el presupuesto**, ya que la suma de las inversiones es exactamente de 2,000,000 €. Además, se respeta la condición de mantener al menos el 20% del presupuesto en activos líquidos mediante la inversión en efectivo. También se cumple la restricción de exclusión, invirtiendo únicamente en préstamos a mediano plazo y no en los de corto plazo. Finalmente, se asegura la liquidez mediante la selección de bonos o reservas en efectivo.\n",
+    "\n",
+    "La solución encontrada es **factible y óptima**, ya que maximiza el retorno total esperado mientras satisface todas las restricciones del problema. La estrategia de inversión seleccionada equilibra la rentabilidad con la seguridad, asegurando que el banco pueda cumplir con sus obligaciones financieras y mantener un nivel adecuado de liquidez."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1255,7 +1370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
