--- a/problema-lineal.ipynb
+++ b/problema-lineal.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "## Planteamiento del problema.\n",
-    "Con base en este artículo, es posible formular diversos problemas de programación lineal que permitan abordar los aspectos tratados."
+    "Con base en este artículo, es posible formular diversos problemas de optimización que permitan abordar los aspectos tratados."
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
        "11       0.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1341,7 @@
     "100.000 + 36.000 + 4.000 = 140.000 \\text{€}\n",
     "$$\n",
     "\n",
-    "Desde el punto de vista de las restricciones, la solución garantiza que la **inversión total no excede el presupuesto**, ya que la suma de las inversiones es exactamente de 2,000,000 €. Además, se respeta la condición de mantener al menos el 20% del presupuesto en activos líquidos mediante la inversión en efectivo. También se cumple la restricción de exclusión, invirtiendo únicamente en préstamos a mediano plazo y no en los de corto plazo. Finalmente, se asegura la liquidez mediante la selección de bonos o reservas en efectivo.\n",
+    "Desde el punto de vista de las restricciones, la solución garantiza que la **inversión total no excede el presupuesto**, ya que la suma de las inversiones es exactamente de 2.000.000 €. Además, se respeta la condición de mantener al menos el 20% del presupuesto en activos líquidos mediante la inversión en efectivo. También se cumple la restricción de exclusión, invirtiendo únicamente en préstamos a mediano plazo y no en los de corto plazo. Finalmente, se asegura la liquidez mediante la selección de bonos o reservas en efectivo.\n",
     "\n",
     "La solución encontrada es **factible y óptima**, ya que maximiza el retorno total esperado mientras satisface todas las restricciones del problema. La estrategia de inversión seleccionada equilibra la rentabilidad con la seguridad, asegurando que el banco pueda cumplir con sus obligaciones financieras y mantener un nivel adecuado de liquidez."
    ]
@@ -1350,7 +1350,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bibliografía."
+    "## Bibliografía.\n",
+    "La bibliografía presentada a continuación recopila diversas fuentes relevantes que han sido utilizadas para el desarrollo y fundamentación del presente trabajo. Se han seleccionado textos de referencia en el ámbito de la investigación de operaciones, así como artículos científicos que proporcionan metodologías y enfoques actuales en la gestión de recursos financieros.\n",
+    "\n",
+    "- Codina, L. (2010). *Revisión sistemática en ciencias sociales y humanidades: Aplicación a la búsqueda y análisis de información científica*. Universitat de Barcelona. https://diposit.ub.edu/dspace/bitstream/2445/178481/1/178481.pdf\n",
+    "\n",
+    "- Fisher, M. L., & Raman, A. (1996). *Reducing the cost of demand uncertainty through accurate response to early sales*. *European Journal of Operational Research, 103*(1), 156-174. https://www.sciencedirect.com/science/article/pii/S030504839700008X\n",
+    "\n",
+    "- Martí, P., Gil, P., & Velasco, M. (2015). *Sistemas de control en tiempo real*. Edicions UPC. https://upcommons.upc.edu/bitstream/handle/2117/89074/9788498806007.pdf\n",
+    "\n",
+    "- Taha, H. A. (2011). *Investigación de operaciones* (9ª ed.). Pearson Educación. https://fad.unsa.edu.pe/bancayseguros/wp-content/uploads/sites/4/2019/03/investigacic3b3n-de-operaciones-9na-edicic3b3n-hamdy-a-taha-fl.pdf\n",
+    "\n",
+    "- Romero, C. A., & León, F. G. (2019). *Programación lineal*. Editorial ESPOCH. http://cimogsys.espoch.edu.ec/direccion-publicaciones/public/docs/books/2019-09-19-210805-58%20Libro%20Programacio%CC%81n%20Lineal%20final.pdf\n",
+    "\n",
+    "- Niño Mora, J. (2021). *Introducción a la optimización de decisiones*. Ediciones Pirámide."
    ]
   }
  ],
