configurar lint de Markdown - config de npm

--- a/problema-lineal.ipynb
+++ b/problema-lineal.ipynb
@@ -66,8 +66,10 @@
     "#### Planteamiento: Problema Primal.\n",
     "**Variables de decisión.** Sea:\n",
     "$$\n",
-    "x_1 \\equiv \\text{Cantidad monetaria invertida en préstamos a corto plazo en millones.} \\\\\n",
-    "x_2 \\equiv \\text{Cantidad monetaria mantenida como reservas en efectivo  en millones.}\n",
+    "\\begin{aligned}\n",
+    "x_1 &\\equiv \\text{Cantidad monetaria invertida en préstamos a corto plazo (en millones).} \\\\\n",
+    "x_2 &\\equiv \\text{Cantidad monetaria mantenida como reservas en efectivo (en millones).}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "**Función objetivo.** El objetivo del banco es maximizar el rendimiento total de las inversiones, considerando las tasas de retorno asignadas a los préstamos a corto plazo y a las reservas en efectivo.\n",
     "$$\n",
@@ -94,11 +96,13 @@
    "source": [
     "Tras haber definido las variables de decisión, la función objetivo y las restricciones, el problema puede ser formulado de la siguiente forma.\n",
     "$$\n",
-    "\\text{maximizar} \\quad 0.08x_1 + 0.01x_2 \\\\\n",
-    "\\text{sujeto a.} \\quad x_1 + x_2 \\leqslant 2 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad x_2 \\geqslant 0.4 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad x_1, x_2 \\geqslant 0\n",
-    "$$\n"
+    "\\begin{aligned}\n",
+    "\\text{maximizar} \\quad & 0.08x_1 + 0.01x_2 \\\\\n",
+    "\\text{sujeto a.} \\quad & x_1 + x_2 \\leqslant 2, \\\\\n",
+    "                      & x_2 \\geqslant 0.4, \\\\\n",
+    "                      & x_1, x_2 \\geqslant 0.\n",
+    "\\end{aligned}\n",
+    "$$"
    ]
   },
   {
@@ -293,12 +297,13 @@
    "metadata": {},
    "source": [
     "Tras haber formulado el problema primal, su problema dual puede expresarse de la siguiente manera:\n",
-    "\n",
     "$$\n",
-    "\\text{minimizar} \\quad 2y_1 - 0.4y_2 \\\\\n",
-    "\\text{sujeto a.} \\quad y_1 \\geq 0.08 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad y_1 - y_2 \\geq 0.01 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad y_1, y_2 \\geqslant 0\n",
+    "\\begin{aligned}\n",
+    "\\text{minimizar} \\quad & 2y_1 - 0.4y_2 \\\\\n",
+    "\\text{sujeto a.} \\quad & y_1 \\geq 0.08, \\\\\n",
+    "                      & y_1 - y_2 \\geq 0.01, \\\\\n",
+    "                      & y_1, y_2 \\geqslant 0.\n",
+    "\\end{aligned}\n",
     "$$"
    ]
   },
@@ -474,12 +479,14 @@
     "#### Planteamiento: Problema Primal.\n",
     "**Variables de decisión.** Sea:\n",
     "$$\n",
-    "x_1 \\equiv \\text{Cantidad monetaria invertida en préstamos a corto plazo.} \\\\\n",
-    "x_2 \\equiv \\text{Cantidad monetaria invertida en préstamos a mediano plazo} \\\\\n",
-    "x_3 \\equiv \\text{Cantidad monetaria invertida en bonos a 3 meses.} \\\\\n",
-    "x_4 \\equiv \\text{Cantidad monetaria invertida en bonos a 6 meses.} \\\\\n",
-    "x_5 \\equiv \\text{Cantidad monetaria invertida en reservas en efectivo.} \\\\\n",
-    "x_6 \\equiv \\text{Cantidad monetaria invertida en depósitos interbancarios.}\n",
+    "\\begin{aligned}\n",
+    "x_1 &\\equiv \\text{Cantidad monetaria invertida en préstamos a corto plazo.} \\\\\n",
+    "x_2 &\\equiv \\text{Cantidad monetaria invertida en préstamos a mediano plazo.} \\\\\n",
+    "x_3 &\\equiv \\text{Cantidad monetaria invertida en bonos a 3 meses.} \\\\\n",
+    "x_4 &\\equiv \\text{Cantidad monetaria invertida en bonos a 6 meses.} \\\\\n",
+    "x_5 &\\equiv \\text{Cantidad monetaria invertida en reservas en efectivo.} \\\\\n",
+    "x_6 &\\equiv \\text{Cantidad monetaria invertida en depósitos interbancarios.}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "**Función objetivo.** El objetivo del banco es maximizar el rendimiento total de las inversiones, considerando las tasas de retorno asignadas a cada opción de inversión.\n",
@@ -512,12 +519,14 @@
    "source": [
     "Tras haber definido las variables de decisión, la función objetivo y las restricciones, el problema puede ser formulado de la siguiente forma.\n",
     "$$\n",
-    "\\text{maximizar} \\quad 0.08x_1 + 0.10x_2 + 0.05x_3 + 0.06x_4 + 0.01x_5 + 0.04x_6 \\\\\n",
-    "\\text{sujeto a.} \\quad x_1 + x_2 + x_3 + x_4 + x_5 + x_6 \\leqslant 2000000 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad x_5 + x_6 \\geqslant 2000000 \\cdot 0.20 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad x_2 \\leqslant 1000000 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad x_3 + x_4 + x_5 \\geqslant 2000000 \\cdot 0.30 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad x_1, x_2, x_3, x_4, x_5, x_6 \\geqslant 0\n",
+    "\\begin{aligned}\n",
+    "\\text{maximizar} \\quad & 0.08x_1 + 0.10x_2 + 0.05x_3 + 0.06x_4 + 0.01x_5 + 0.04x_6 \\\\\n",
+    "\\text{sujeto a.} \\quad & x_1 + x_2 + x_3 + x_4 + x_5 + x_6 \\leqslant 2000000, \\\\\n",
+    "                      & x_5 + x_6 \\geqslant 2000000 \\cdot 0.20, \\\\\n",
+    "                      & x_2 \\leqslant 1000000, \\\\\n",
+    "                      & x_3 + x_4 + x_5 \\geqslant 2000000 \\cdot 0.30, \\\\\n",
+    "                      & x_1, x_2, x_3, x_4, x_5, x_6 \\geqslant 0.\n",
+    "\\end{aligned}\n",
     "$$"
    ]
   },
@@ -626,15 +635,17 @@
    "source": [
     "Tras haber formulado el problema primal, su problema dual puede expresarse de la siguiente manera:\n",
     "$$\n",
-    "\\text{minimizar} \\quad 2000000y_1 - 400000y_2 + 1000000y_3 - 600000y_4 \\\\\n",
-    "\\text{sujeto a.} \\quad y_1 \\geq 0.08 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad y_1 + y_3 \\geq 0.10 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad y_1 - y_4 \\geq 0.05 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad y_1 - y_4 \\geq 0.06 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad y_1 - y_2 - y_4 \\geq 0.01 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad y_1 - y_2 \\geq 0.04 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad y_1, y_2, y_3, y_4 \\geq 0\n",
-    "$$\n"
+    "\\begin{aligned}\n",
+    "\\text{minimizar} \\quad & 2000000y_1 - 400000y_2 + 1000000y_3 - 600000y_4 \\\\\n",
+    "\\text{sujeto a.} \\quad & y_1 \\geq 0.08, \\\\\n",
+    "                      & y_1 + y_3 \\geq 0.10, \\\\\n",
+    "                      & y_1 - y_4 \\geq 0.05, \\\\\n",
+    "                      & y_1 - y_4 \\geq 0.06, \\\\\n",
+    "                      & y_1 - y_2 - y_4 \\geq 0.01, \\\\\n",
+    "                      & y_1 - y_2 \\geq 0.04, \\\\\n",
+    "                      & y_1, y_2, y_3, y_4 \\geq 0.\n",
+    "\\end{aligned}\n",
+    "$$"
    ]
   },
   {
@@ -1171,10 +1182,12 @@
     "\n",
     "**Variables de decisión.** Sea:\n",
     "$$\n",
-    "x_1 \\equiv \\text{Inversión en préstamos a corto plazo (0 o 1).} \\\\\n",
-    "x_2 \\equiv \\text{Inversión en préstamos a mediano plazo (0 o 1).} \\\\\n",
-    "x_3 \\equiv \\text{Inversión en bonos a 6 meses (0 o 1).} \\\\\n",
-    "x_4 \\equiv \\text{Inversión en reservas en efectivo (0 o 1).}\n",
+    "\\begin{aligned}\n",
+    "x_1 &\\equiv \\text{Inversión en préstamos a corto plazo (0 o 1).} \\\\\n",
+    "x_2 &\\equiv \\text{Inversión en préstamos a mediano plazo (0 o 1).} \\\\\n",
+    "x_3 &\\equiv \\text{Inversión en bonos a 6 meses (0 o 1).} \\\\\n",
+    "x_4 &\\equiv \\text{Inversión en reservas en efectivo (0 o 1).}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "**Función objetivo.** El objetivo del banco es maximizar el rendimiento total de las inversiones, considerando las tasas de retorno y los montos asociados a cada opción:\n",
@@ -1210,12 +1223,14 @@
     "Tras haber definido las variables de decisión, la función objetivo y las restricciones, el problema puede ser formulado de la siguiente forma:\n",
     "\n",
     "$$\n",
-    "\\text{maximizar} \\quad 64000x_1 + 100000x_2 + 36000x_3 + 4000x_4 \\\\\n",
-    "\\text{sujeto a.} \\quad 800000x_1 + 1000000x_2 + 600000x_3 + 400000x_4 \\leqslant 2000000 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad x_4 \\geqslant 1 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad x_1 + x_2 \\leqslant 1 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad x_3 + x_4 \\geqslant 1 \\\\\n",
-    "\\phantom{\\text{sujeto a.}} \\quad x_1, x_2, x_3, x_4 \\in \\{0,1\\}\n",
+    "\\begin{aligned}\n",
+    "\\text{maximizar} \\quad & 64000x_1 + 100000x_2 + 36000x_3 + 4000x_4 \\\\\n",
+    "\\text{sujeto a.} \\quad & 800000x_1 + 1000000x_2 + 600000x_3 + 400000x_4 \\leqslant 2000000, \\\\\n",
+    "                      & x_4 \\geqslant 1, \\\\\n",
+    "                      & x_1 + x_2 \\leqslant 1, \\\\\n",
+    "                      & x_3 + x_4 \\geqslant 1, \\\\\n",
+    "                      & x_1, x_2, x_3, x_4 \\in \\{0,1\\}.\n",
+    "\\end{aligned}\n",
     "$$"
    ]
   },
